2009-06-17  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: chars are properly
	  supported now. Remove MoonlightBug

2009-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/AssemblyPartCollectionTest.cs: New. Tests to 
	check differences between Deployement and standalone cases.
	* System.Windows/AssemblyPartTest.cs: Change GetLibraryStream to 
	public so it can be reused.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/VisualTreeHelperTest.cs: Fix one corner
	  case, mark two others as corner cases and create a new test
	  from one of the corner cases which tests for the same thing
	  but less strictly.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add MoonlightBug
	to a Loaded_styledChildOfNonStyledParent_styledSiblingInsertedBefore.

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/PrimitiveTest.cs: Fixed this issue magicidently.

2009-06-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows/DeploymentTest.cs: Test that the Deployment.
	ExternalCallersFromCrossDomain property can only be set in the
	manifest, i.e. is a read-only value from managed code.

2009-06-11  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: New files added: 
	SelectorItemAutomationPeerTest.cs and SelectorAutomationPeerTest.cs.
	* System.Windows.Automation.Peers/ItemsControlAutomationPeerTest.cs, 
	System.Windows.Automation.Peers/ItemAutomationPeerTest.cs: 
	Subclassing FrameworkElementAutomationPeerTest.
	* System.Windows.Automation.Peers/ButtonAutomationPeerTest.cs: 
	Implementation ContentTest
	* System.Windows.Automation.Peers/SelectorAutomationPeerTest.cs: 
	New file. Tests SelectorAutomationPeer.
	* System.Windows.Automation.Peers/TextBlockAutomationPeerTest.cs: 
	ContentTest overridden.
	* System.Windows.Automation.Peers/SelectorItemAutomationPeerTest.cs: 
	New file. Tests SelectorItemAutomationPeer.